[#1779] Fixed alignment of search results page and feedback

--- a/src/open_inwoner/scss/components/Feedback/Feedback.scss
+++ b/src/open_inwoner/scss/components/Feedback/Feedback.scss
@@ -1,4 +1,5 @@
 .feedback {
+  margin: var(--row-height-giant) 0 0 0;
   &__remark {
     display: none;
 
